# raspberry-pi-playground

./: .gitignore  cam_test.py  diagram.xml  multicast_receiver.py
UDP/: .gitignore  CMakeLists.txt  Multicast_sender.cpp  Multicast_sender.h  build_pc.sh  client  client.cpp  client.h  communication_tester.cpp  compile.sh  main.cpp  main_client.cpp  main_server.cpp  multicast_receiver.cpp  multicast_receiver.h  raspberrypi.toolchain.cmake  server  server.c  server.cpp  utils.cpp
UDP/client/: main_client.cpp
UDP/msg/: heartbeat.cpp  heartbeat.h
UDP/scripts/: install_pc.sh  install_rpi.sh
UDP/server/: main_server.cpp
UDP/server/Configuration/: config.conf
UDP/server/include/: main_server.h
UDP/server/logs/: main_log.txt
UDP/utils/: logger.cpp  logger.h  utils.cpp  utils.h
